# semgrep-rule-bundler

./: .gitignore  Dockerfile  README.md  bundle-rules.sh  bundler.py  langs.txt  pyproject.toml
output/: semgrep-docker.yml  semgrep-python.yml
